trying to fix text input visibility

--- a/docs/final-project/new/style.css
+++ b/docs/final-project/new/style.css
@@ -21,7 +21,7 @@ body {
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 1;
+  z-index: 2;
   /* Sit on top */
   padding-top: 100px;
   /* Location of the box */
@@ -127,15 +127,6 @@ body {
   bottom: 10px;
 }
 
-.mode-selector {
-  /*center the three toggle switches */
-  /*   margin: 0;
-  position: abolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); */
-}
 
 /* Add Animation */
 @keyframes animatetop {
@@ -150,19 +141,45 @@ body {
 }
 
 #textField {
+  opacity: 0;
   font-size: 1em;
-  display: "none";
+  /* display: "none"; */
   width: 300px;
   bottom: 100px;
+  z-index: 0;
+}
+
+.showMeOff {
+  display: block;
+  opacity: 1;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+#hoverMenu{
+  opacity: 1;
+  transition: opacity 2s;
+}
+
+.hoverMenu{
+  /* display: none; */
+  position: block;
+  top: 95%;
+  left: 10px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .textField {
   font-size: 1em;
-  display: "none";
+  opacity: 0;
   width: 300px;
   bottom: 100px;
-  z-index: 1;
+  z-index: 0;
 }
 
 #letters {
@@ -241,7 +258,7 @@ body {
 .placeArea{ 
   /* make the div take up the whole screen */
   width: 100%;
-  height: 100vh;
+  height: 90vh;
 }
   
 .viewModeText {
@@ -337,23 +354,3 @@ body {
   opacity: 0;
 }
 
-
-/* move from here below to vs code 04/19*/
-
-#hoverMenu{
-  opacity: 1;
-  transition: opacity 2s;
-}
-
-#hoverMenu.hidden {
-  opacity: 0;
-}
-
-.editSlider{
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
